--- a/news.html
+++ b/news.html
@@ -1,5 +1,37 @@
 <html>
-  <main>
-    <div>Hello World!</div>
-  </main>
-<!html>
+	<head>
+		<meta charset = "utf-8">
+		<title>Phi Kappa Psi</title>
+
+		<link rel = "stylesheet" href = "style.css" media = "screen">
+		<script src="https://kit.fontawesome.com/09b08a9c7d.js" crossorigin="anonymous"></script>
+
+	</head>
+
+	<body>
+		<header>
+			<div id = "header"><a href = "#" id = "main-page">PHI KAPPA PSI - OREGON STATE UNIVERSITY</a></div>
+		</header>
+		<main>
+			<img id = "main-photo" src="">
+			<div id = "main-photo-words">
+				<div id = "main-photo-caption">Page Title</div>
+				<div id = "main-photo-subcaption">Phi Kappa Psi</div>
+			</div>
+			<div id = "content">
+          
+					insert content here
+
+			</div>
+		</main>
+		<footer>
+			<div id = "social-media">
+				<a href = "https://www.instagram.com/phipsiorbeta/?hl=en"><i class="fab fa-instagram"></i></a>
+			</div>
+			<div id = "address">
+				Phi Kappa Psi - Oregon State University, 140 NW 13th St, Corvallis, OR, 97330, United States
+			</div>
+		</footer>
+	</body>
+</html>
+
