--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<header>
-			<div id = "header"><a href = "/" id = "main-page">PHI KAPPA PSI - OREGON STATE UNIVERSITY</a></div>
+			<div id = "header"><a href = "/PhiKappaPsi" id = "main-page">PHI KAPPA PSI - OREGON STATE UNIVERSITY</a></div>
 		</header>
 		<main>
 			<img id = "main-photo" src="">
