--- a/news.html
+++ b/news.html
@@ -13,10 +13,12 @@
 			<div id = "header"><a href = "/PhiKappaPsi" id = "main-page">PHI KAPPA PSI - OREGON STATE UNIVERSITY</a></div>
 		</header>
 		<main>
-			<img id = "main-photo" src="https://images.squarespace-cdn.com/content/v1/55dfc744e4b02e73a0725476/1451447659670-X6RDA4LS57LUEA7WVRUN/ke17ZwdGBToddI8pDm48kB_zLdHkF97iuaXf9U4Pyr17gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0p4XabXLlNWpcJMv7FrN_NJ1zIoj4arv3T1JNI_9tGUhTGjS3ROJqeAbBF4fkEeD6w/IMG_9202.jpg">
-			<div id = "main-photo-words">
-				<div id = "main-photo-caption">News</div>
-				<div id = "main-photo-subcaption">Phi Kappa Psi</div>
+			<div id = "main-photo-container">
+				<img id = "main-photo" src="https://images.squarespace-cdn.com/content/v1/55dfc744e4b02e73a0725476/1451447659670-X6RDA4LS57LUEA7WVRUN/ke17ZwdGBToddI8pDm48kB_zLdHkF97iuaXf9U4Pyr17gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0p4XabXLlNWpcJMv7FrN_NJ1zIoj4arv3T1JNI_9tGUhTGjS3ROJqeAbBF4fkEeD6w/IMG_9202.jpg">
+				<div id = "main-photo-words">
+					<div id = "main-photo-caption">News</div>
+					<div id = "main-photo-subcaption">Phi Kappa Psi</div>
+				</div>
 			</div>
 			<div id = "content">
           
