--- a/news.html
+++ b/news.html
@@ -21,9 +21,9 @@
 				</div>
 			</div>
 			<div id = "content">
-          
+          			<div id = "blocks">
 					insert content here
-
+				</div>
 			</div>
 		</main>
 		<footer>
