--- a/index.html
+++ b/index.html
@@ -35,37 +35,37 @@
 					</div>
 					<div class = "block">
 						<img class = "class-photo" src = "">
-						<h3>Brotherhood</h3>
+						<h3><a href = "brotherhood.html">Brotherhood</a></h3>
 						<div class = "block-text">Find out what our brotherhood means to us, waht makes us different from other fraternities, and what we can offer you</div>
 					</div>
 					<div class = "block">
 						<img class = "block-photo" src = "https://images.squarespace-cdn.com/content/v1/55dfc744e4b02e73a0725476/1451448730443-M5PC83ZTF6VFYNAUYGS2/ke17ZwdGBToddI8pDm48kPfht_EiJQ7cxEq4yBHYfpx7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UT1jnD27OYrinqKJtsfAyzET-zZp25AeJH5RRB_vP9kZBnoVJDK4PhWxVE-6gQ4lNA/IMG_0584.jpg">
-						<h3>Academics</h3>
+						<h3><a href = "academics.html">Academics</a></h3>
 						<div class = "block-text">Learn how the unique resources of our fraternity can help you achieve academic excellence</div>
 					</div>
 					<div class = "block">
 						<img class = "block-photo" src = "">
-						<h3>In the Community</h3>
+						<h3><a href = "inthecommunity.html">In the Community</a></h3>
 						<div class = "block-text" >See how being a Phi Psi creates opportunity for engagement with OSU clubs, activities, and the city of Corvallis</div>
 					</div>
 					<div class = "block">
 						<img class = "block-photo" src="https://images.squarespace-cdn.com/content/v1/55dfc744e4b02e73a0725476/1440733454224-8KJ2NMEFVQZC44MC7ZJD/ke17ZwdGBToddI8pDm48kH6fPBHeuCv_IqswS3Q-9JJ7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UdOuUkzqMGMAnIc_zSfHdni2JC80USpvAXo1WjE8CapyxMLawJN1msShJFOhJkkAfw/PhiPsiChapterhouse.jpg">
-						<h3>Chapter House</h3>
+						<h3><a href = "chapterhouse.html">Chapter House</a></h3>
 						<div class = "block-text">Re-built in 2011, the Phi Psi house is the newest Greek house at OSU and an awesome place to live</div>
 					</div>
 					<div class = "block">
 						<img class = "block-photo" src = "">
-						<h3>Recruitment</h3>
+						<h3><a href = "recruitment.html">Recruitment</a></h3>
 						<div class = "block-text">All you need to know about how to join our brotherhood and how to become a Phi Psi</div>
 					</div>
 					<div class = "block">
 						<img class = "block-photo" src = "">
-						<h3>Leadership</h3>
+						<h3><a href = "leadership.html">Leadership</a></h3>
 						<div class = "block-text">Meet our fraternity officers, and learn what role each man plays in bettering Phi Psi</div>
 					</div>
 					<div class = "block">
 						<img class = "block-photo" src = "">
-						<h3>Alumni</h3>
+						<h3><a href = "alumni.html">Alumni</a></h3>
 						<div class = "block-text">Check out the positive impact of our esteemed alumni, and learn how you can give back to Phi Psi as an alumnus</div>
 					</div>
 				</div>
