--- a/brotherhood.html
+++ b/brotherhood.html
@@ -14,7 +14,7 @@
 		</header>
 		<main>
 			<div id = "main-photo-container">
-				<img id = "main-photo" src="">
+				<img id = "main-photo" src="https://images.squarespace-cdn.com/content/v1/55dfc744e4b02e73a0725476/1451447659670-X6RDA4LS57LUEA7WVRUN/ke17ZwdGBToddI8pDm48kB_zLdHkF97iuaXf9U4Pyr17gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0p4XabXLlNWpcJMv7FrN_NJ1zIoj4arv3T1JNI_9tGUhTGjS3ROJqeAbBF4fkEeD6w/IMG_9202.jpg">
 				<div id = "main-photo-words">
 					<div id = "main-photo-caption">Brotherhood</div>
 					<div id = "main-photo-subcaption">Phi Kappa Psi</div>
