--- a/academics.html
+++ b/academics.html
@@ -22,17 +22,16 @@
 			</div>
 			<div id = "content">
           			<div id = "blocks">
-					<div>
-						Scholastic achievement is celebrated throughout the Phi Kappa Psi Fraternity. Our members are students before they become Phi Psis, after all, and we make success in school a priority. In addition to recognizing our top scholars with awards at national conventions, our Foundation gives thousands of dollars to deserving Phi Psis each year in the form of national and chapter scholarships. Any member can apply for our national scholarships, and each chapter's alumni corporation is responsible for ensuring that money from the Chapter Scholarship Fund is properly awarded to undergraduates who lead the campus in grades and service.
-					</div>
-					<div>
-						We also realize that collegiate life can be difficult. Between juggling social, academic and fraternal schedules, students may find themselves challenged academically. We encourage the use of Oregon State's tutoring and student life offices. In order to further encourage academic excellence, we strictly enforce the required minimum gpa of 2.75 for membership.
-					</div>
-					<div>
-						Phi Psis strive to better themselves in all areas of life, and as university students they can find the assistance and structure they need to accomplish their goals.
-					</div>
+					<div>Scholastic achievement is celebrated throughout the Phi Kappa Psi Fraternity. Our members are students before they become Phi Psis, after all, and we make success in school a priority. In addition to recognizing our top scholars with awards at national conventions, our Foundation gives thousands of dollars to deserving Phi Psis each year in the form of national and chapter scholarships. Any member can apply for our national scholarships, and each chapter's alumni corporation is responsible for ensuring that money from the Chapter Scholarship Fund is properly awarded to undergraduates who lead the campus in grades and service.</div>
+					<p></p>
+					<div>We also realize that collegiate life can be difficult. Between juggling social, academic and fraternal schedules, students may find themselves challenged academically. We encourage the use of Oregon State's tutoring and student life offices. In order to further encourage academic excellence, we strictly enforce the required minimum gpa of 2.75 for membership.</div>
+					<p></p>
+					<div>Phi Psis strive to better themselves in all areas of life, and as university students they can find the assistance and structure they need to accomplish their goals.</div>
+					<p></p>
 					<h2>Scholarships</h2>
+					<p></p>
 					We are pleased to announce that on behalf of the Oregon Beta Phi Kappa Psi House Corporation, we have $9750 available in scholarships this year to give out. Over the past 6 years we have awarded almost $60,000 in scholarship money to Oregon Beta undergrads! These scholarships are open to undergrads (both pledges and brothers) of Oregon Beta. Listed below is the breakdown of scholarships available:
+					<p></p>
 					<ul>
 						<li>Douglas C. Condit Leadership Award- $2000</li>
 						<li>Edward T. Sturgeon Memorial Award- $1500</li>
@@ -42,6 +41,7 @@
 						<li>First Year Member Scholarship Award- $1000</li>
 						<li>Second Year Member Scholarship Award- $1000</li>
 					</ul>
+					<p></p>
 					With the varying degree of scholarships, we hope that we have given every undergrad an opportunity to apply for at least one scholarship.
 				</div>
 				<footer>
