--- a/inthecommunity.html
+++ b/inthecommunity.html
@@ -22,7 +22,7 @@
 			</div>
 			<div id = "content">
           			<div id = "blocks">
-					insert content here
+					<div>Phi Kappa Psi fraternity was founded on one overarching ideal: “The Great Joy of Serving Others”. This means that in addition to improving the lives of our own brothers by fostering life-long friendships and providing them the tools for academic excellence, we consider it vitally important that Phi Psi is making a positive impact at OSU and in the Corvallis community.</div>
 				</div>
 			</div>
 		</main>
