--- a/recruitment.html
+++ b/recruitment.html
@@ -22,7 +22,13 @@
 			</div>
 			<div id = "content">
           			<div id = "blocks">
-					insert content here
+					<div>Recruitment continues throughout the year for Phi Psi Oregon Beta. We are always looking to garner interest from potential new members, as we strive to recruit the best possible brothers in each recruitment cycle. We work alongside The Interfraternity Council (IFC) at Oregon State to abide by all of the proper policies set in place by the University. Our strong membership has laid a foundation that has made our chapter success possible. Oregon Beta is working to acquire leaders at Oregon State University and move forward with our long-term chapter goals. If you know of anyone who plans to attend OSU next year, or currently attends, please refer him to us by contacting our recruitment chairmen:</div>
+					<p></p>
+					<ul>
+						<li>name: number</li>
+						<li>name: number</li>
+						<li>name: number</li>
+					</ul>
 				</div>
 			</div>
 		</main>
