--- a/leadership.html
+++ b/leadership.html
@@ -22,17 +22,60 @@
 			</div>
 			<div id = "content">
           			<div id = "blocks">
-					insert content here
+					<h2>President</h2>
+					<p></p>
+					<h3>Zach Crawford</h3>
+					<p></p>
+					<div>small Bio here</div>
+					<p></p>
+					<div>Contact Information</div>
+					<p></p>
+					<div>Email: </div>
+					<p></p>
+					<div>Phone: </div>
+					<p></p>
+					<h2>Vice President</h2>
+					<p></p>
+					<h3>Tom Baty</h3>
+					<p></p>
+					<h2>Treasurer</h2>
+					<p></p>
+					<h3>Connor Yowell</h3>
+					<p></p>
+					<h2>Corresponding Secretary</h2>
+					<p></p>
+					<h3>Briggs Kalish</h3>
+					<p></p>
+					<h2>Recording Secretary</h2>
+					<p></p>
+					<h3>Mohammad Hassan</h3>
+					<p></p>
+					<h2>Historian</h2>
+					<p></p>
+					<h3>Joe Nieting</h3>
+					<p></p>
+					<h2>Sergeant at Arms</h2>
+					<p></p>
+					<h3>Phillip Dihn</h3>
+					<p></p>
+					<h2>Messenger</h2>
+					<p></p>
+					<h3>Zachary Smith</h3>
+					<p></p>
+					<h2>Chaplain</h2>
+					<p></p>
+					<h3>Joshua Tabb</h3>
+					<p></p>
 				</div>
+				<footer>
+					<div id = "social-media">
+						<a href = "https://www.instagram.com/phipsiorbeta/?hl=en"><i class="fab fa-instagram"></i></a>
+					</div>
+					<div id = "address">
+						Phi Kappa Psi - Oregon State University, 140 NW 13th St, Corvallis, OR, 97330, United States
+					</div>
+				</footer>
 			</div>
 		</main>
-		<footer>
-			<div id = "social-media">
-				<a href = "https://www.instagram.com/phipsiorbeta/?hl=en"><i class="fab fa-instagram"></i></a>
-			</div>
-			<div id = "address">
-				Phi Kappa Psi - Oregon State University, 140 NW 13th St, Corvallis, OR, 97330, United States
-			</div>
-		</footer>
 	</body>
 </html>
