--- a/academics.html
+++ b/academics.html
@@ -22,11 +22,11 @@
 			</div>
 			<div id = "content">
           			<div id = "blocks">
-					<div>Scholastic achievement is celebrated throughout the Phi Kappa Psi Fraternity. Our members are students before they become Phi Psis, after all, and we make success in school a priority. In addition to recognizing our top scholars with awards at national conventions, our Foundation gives thousands of dollars to deserving Phi Psis each year in the form of national and chapter scholarships. Any member can apply for our national scholarships, and each chapter's alumni corporation is responsible for ensuring that money from the Chapter Scholarship Fund is properly awarded to undergraduates who lead the campus in grades and service.</div>
+					<div>Scholastic achievement is celebrated throughout the Phi Kappa Psi Fraternity. Our members are students before they become Phi Psi's, after all, and we make success in school a priority. In addition to recognizing our top scholars with awards at national conventions, our Foundation gives thousands of dollars to deserving Phi Psi's each year in the form of national and chapter scholarships. Any member can apply for our national scholarships, and each chapter's alumni corporation is responsible for ensuring that money from the Chapter Scholarship Fund is properly awarded to undergraduates who lead the campus in grades and service.</div>
 					<p></p>
-					<div>We also realize that collegiate life can be difficult. Between juggling social, academic and fraternal schedules, students may find themselves challenged academically. We encourage the use of Oregon State's tutoring and student life offices. In order to further encourage academic excellence, we strictly enforce the required minimum gpa of 2.75 for membership.</div>
+					<div>We also realize that collegiate life can be difficult. Between juggling social, academic and fraternal schedules, students may find themselves challenged academically. We encourage the use of Oregon State's tutoring and student life offices. In order to further encourage academic excellence, we strictly enforce a required minimum GPA of 2.75 for membership.</div>
 					<p></p>
-					<div>Phi Psis strive to better themselves in all areas of life, and as university students they can find the assistance and structure they need to accomplish their goals.</div>
+					<div>Phi Psi's strive to better themselves in all areas of life, and as university students they can find the assistance and structure they need to accomplish their goals.</div>
 					<p></p>
 					<h2>Scholarships</h2>
 					<p></p>
