--- a/leadership.html
+++ b/leadership.html
@@ -32,7 +32,7 @@
 					<p></p>
 					<div>Email: </div>
 					<p></p>
-					<div>Phone: </div>
+					<div>Phone: 408-688-1180</div>
 					<p></p>
 					<h2>Vice President</h2>
 					<p></p>
@@ -56,7 +56,7 @@
 					<p></p>
 					<h2>Sergeant at Arms</h2>
 					<p></p>
-					<h3>Phillip Dihn</h3>
+					<h3>Phillip Dinh</h3>
 					<p></p>
 					<h2>Messenger</h2>
 					<p></p>
