--- a/inthecommunity.html
+++ b/inthecommunity.html
@@ -23,6 +23,13 @@
 			<div id = "content">
           			<div id = "blocks">
 					<div>Phi Kappa Psi fraternity was founded on one overarching ideal: “The Great Joy of Serving Others”. This means that in addition to improving the lives of our own brothers by fostering life-long friendships and providing them the tools for academic excellence, we consider it vitally important that Phi Psi is making a positive impact at OSU and in the Corvallis community.</div>
+					<div>For more information on Phi Psi’s philanthropic presence in the Corvallis community, feel free to reach out to us:</div>
+					<p></p>
+					<ul>
+						<li>External Philanthropy Chairman, Grant Chambers:</li>
+						<li>Internal Philanthropy Chairman, Will Farrens: 541-848-0220</li>
+						<li>Service Chairman, Matthew Hotchkiss: 971-400-8884</li>
+					</ul>
 				</div>
 			</div>
 		</main>
