--- a/leadership.html
+++ b/leadership.html
@@ -24,7 +24,7 @@
           			<div id = "blocks">
 					<h2>President</h2>
 					<p></p>
-					<h3>Zach Crawford</h3>
+					<h3 class = "officer">Zach Crawford</h3>
 					<p></p>
 					<div>small Bio here</div>
 					<p></p>
@@ -34,37 +34,45 @@
 					<p></p>
 					<div>Phone: 408-688-1180</div>
 					<p></p>
+					<p></p>
 					<h2>Vice President</h2>
 					<p></p>
-					<h3>Tom Baty</h3>
+					<h3 class = "officer">Tom Baty</h3>
+					<p></p>
 					<p></p>
 					<h2>Treasurer</h2>
 					<p></p>
-					<h3>Connor Yowell</h3>
+					<h3 class = "officer">Connor Yowell</h3>
+					<p></p>
 					<p></p>
 					<h2>Corresponding Secretary</h2>
 					<p></p>
-					<h3>Briggs Kalish</h3>
+					<h3 class = "officer">Briggs Kalish</h3>
+					<p></p>
 					<p></p>
 					<h2>Recording Secretary</h2>
 					<p></p>
-					<h3>Mohammad Hassan</h3>
+					<h3 class = "officer">Mohammad Hassan</h3>
+					<p></p>
 					<p></p>
 					<h2>Historian</h2>
 					<p></p>
-					<h3>Joe Nieting</h3>
+					<h3 class = "officer">Joe Nieting</h3>
+					<p></p>
 					<p></p>
 					<h2>Sergeant at Arms</h2>
 					<p></p>
-					<h3>Phillip Dinh</h3>
+					<h3 class = "officer">Phillip Dinh</h3>
+					<p></p>
 					<p></p>
 					<h2>Messenger</h2>
 					<p></p>
-					<h3>Zachary Smith</h3>
+					<h3 class = "officer">Zachary Smith</h3>
+					<p></p>
 					<p></p>
 					<h2>Chaplain</h2>
 					<p></p>
-					<h3>Joshua Tabb</h3>
+					<h3 class = "officer">Joshua Tabb</h3>
 					<p></p>
 				</div>
 				<footer>
