--- a/leadership.html
+++ b/leadership.html
@@ -22,6 +22,8 @@
 			</div>
 			<div id = "content">
           			<div id = "blocks">
+					<ul style="list-style-type:none;">
+					<li>
 					<h2>President</h2>
 					<p></p>
 					<h3 class = "officer">Zach Crawford</h3>
@@ -34,46 +36,55 @@
 					<p></p>
 					<div>Phone: 408-688-1180</div>
 					<p></p>
-					<p></p>
+					</li>
+					<li>
 					<h2>Vice President</h2>
 					<p></p>
 					<h3 class = "officer">Tom Baty</h3>
 					<p></p>
-					<p></p>
+					</li>
+					<li>
 					<h2>Treasurer</h2>
 					<p></p>
 					<h3 class = "officer">Connor Yowell</h3>
 					<p></p>
-					<p></p>
+					</li>
+					<li>
 					<h2>Corresponding Secretary</h2>
 					<p></p>
 					<h3 class = "officer">Briggs Kalish</h3>
 					<p></p>
-					<p></p>
+					</li>
+					<li>
 					<h2>Recording Secretary</h2>
 					<p></p>
 					<h3 class = "officer">Mohammad Hassan</h3>
 					<p></p>
-					<p></p>
+					</li>
+					<li>
 					<h2>Historian</h2>
 					<p></p>
 					<h3 class = "officer">Joe Nieting</h3>
 					<p></p>
-					<p></p>
+					</li>
+					<li>
 					<h2>Sergeant at Arms</h2>
 					<p></p>
 					<h3 class = "officer">Phillip Dinh</h3>
 					<p></p>
-					<p></p>
+					</li>
+					<li>
 					<h2>Messenger</h2>
 					<p></p>
 					<h3 class = "officer">Zachary Smith</h3>
 					<p></p>
-					<p></p>
+					</li>
+					<li>
 					<h2>Chaplain</h2>
 					<p></p>
 					<h3 class = "officer">Joshua Tabb</h3>
-					<p></p>
+					</li>
+					</ul>
 				</div>
 				<footer>
 					<div id = "social-media">
