--- a/leadership.html
+++ b/leadership.html
@@ -32,9 +32,10 @@
 					<p></p>
 					<div>Contact Information</div>
 					<p></p>
-					<div>Email: </div>
-					<p></p>
-					<div>Phone: 408-688-1180</div>
+					<ul>
+						<li>Email: </li>
+						<li>Phone: 408-688-1180</li>
+					</ul>
 					<p></p>
 					</li>
 					<li>
