--- a/recruitment.html
+++ b/recruitment.html
@@ -28,6 +28,7 @@
 						<li>John Ariola: 503-724-7089</li>
 						<li>Michael Elliot: number</li>
 					</ul>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/nRACiPT-Nrc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 				<footer>
 					<div id = "social-media">
