--- a/recruitment.html
+++ b/recruitment.html
@@ -28,7 +28,16 @@
 						<li>John Ariola: 503-724-7089</li>
 						<li>Michael Elliot: number</li>
 					</ul>
+					<h2>House Tour Video</h2>
+					<div>Feel free to check out our house tour from the Fall of 2020</div>
+					<p></p>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/nRACiPT-Nrc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<p></p>
+					<h2>Upcoming Recruitment Events</h2>
+					<p></p>
+					<div>
+						There is no recruitment schedule for the Spring of 2021 yet. Please check back soon.
+					</div>
 				</div>
 				<footer>
 					<div id = "social-media">
