--- a/alumni.html
+++ b/alumni.html
@@ -37,7 +37,7 @@
 						<a href = "https://www.instagram.com/phipsiorbeta/?hl=en"><i class="fab fa-instagram"></i></a>
 					</div>
 					<div id = "address">
-						Phi Kappa Psi - Oregon State University, 140 NW 13th St, Corvallis, OR, 97330, United States
+						<a href = "https://goo.gl/maps/jv2Twcj8Seieo24x5">Phi Kappa Psi - Oregon State University, 140 NW 13th St, Corvallis, OR, 97330, United States</a>
 					</div>
 				</footer>
 			</div>
