--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<div class = "block-text">Re-built in 2011, the Phi Psi house is the newest Greek house at OSU and an awesome place to live</div>
 					</div>
 					<div class = "block">
-						<img class = "block-photo" src = "photos/IMG_1743.JPG">
+						<img class = "block-photo" src = "photos/IMG_1743.jpeg">
 						<h3><a href = "recruitment.html">Recruitment</a></h3>
 						<div class = "block-text">All you need to know about how to join our brotherhood and how to become a Phi Psi</div>
 					</div>
