--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<div class = "block-text">Get the latest Phi Psi updates, such as recruitment, philanthropy, intramural sports, and fraternity achievements</div>
 					</div>
 					<div class = "block">
-						<img class = "class-photo" src = "">
+						<img class = "class-photo" src = "photos/File_000.jpeg">
 						<h3><a href = "brotherhood.html">Brotherhood</a></h3>
 						<div class = "block-text">Find out what our brotherhood means to us, waht makes us different from other fraternities, and what we can offer you</div>
 					</div>
